fix: stabilize account deletion, comments, and chat room leave